namespace SlaughtfulConquest.Data;

public class Settings
{
    
}