namespace SlaughtfulConquest.Enemies;

public abstract class Enemy
{
    
}