namespace SlaughtfulConquest.Maps;

public abstract class Map
{
    
}